--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     z-index: 100;
     border-bottom: 1px solid #ddd;
 }
+
+#mobile-menu{
+  display: none;
+}
 #logo {
     position: fixed;
     top: 2px;
@@ -166,6 +170,8 @@ p {
     margin: 10px 0;
     line-height: 1.35em;
     display: block;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 footer {
@@ -177,14 +183,14 @@ footer {
     margin: 0 auto;
     margin-left: 1%;
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
 }
 #footer-content div {
     float: left;
-    margin-right: 20px;
     background-repeat: no-repeat;
-    background-position: 0 1px;
-    padding-bottom: 4px;
+    background-position: 0 1px;  
+    display: inline-block;
+    padding-left: 5%;
 }
 
 .gh-btn {
@@ -225,9 +231,6 @@ footer {
     padding-left: 15px;
 }
 
-#github{
-  padding-left: 2%;
-}
 
 @media (max-width: 899px){
   #logo {
@@ -235,19 +238,25 @@ footer {
     width: 100%;
       
   }
+  #mobile-menu{
+  display: block;
+  margin-left: 1%;
+  margin-top: 1%;
+  } 
   a.express{
     display: none !important;
   }
   #logo a {
     display: table!important;
     margin: 0 auto;
-    font-weight: bold !important;
+    font-weight: bold ;
   }
   #navMenu{
     display: none;
   }
-  #logo.express{
+  #logo .express{
     font-weight: bold;
+    margin-top: -38px;
   }
   .clearfix{
     background-color: none;
@@ -262,6 +271,9 @@ footer {
     font-size: 16px;
     line-height: 23px;
     word-break: break-all;
+    margin: 5px 0;
+    color: #353535;
+    -webkit-font-smoothing: antialiased;
   }
   #description .description {
     font-size: 3em;
